RESOLVED FIXED147515
pointSize not used in _addMarkersToList
https://bugs.webkit.org/show_bug.cgi?id=147515
Summary pointSize not used in _addMarkersToList
Matthew Daiter
Reported 2015-07-31 15:44:34 PDT
Local variable pointSize not being used in method addMarkersToList
Attachments
Patch (1.93 KB, patch)
2015-07-31 15:47 PDT, Matthew Daiter
no flags
Matthew Daiter
Comment 1 2015-07-31 15:47:02 PDT
WebKit Commit Bot
Comment 2 2015-07-31 19:39:42 PDT
Comment on attachment 257972 [details] Patch Clearing flags on attachment: 257972 Committed r187704: <http://trac.webkit.org/changeset/187704>
WebKit Commit Bot
Comment 3 2015-07-31 19:39:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.