Removed pointSize from _addMarkersToList https://bugs.webkit.org/show_bug.cgi?id=147515

Reviewed by Eric Carlson.

* editing/cocoa/HTMLConverter.mm:
(HTMLConverter::_addMarkersToList): Deleted.


Canonical link: https://commits.webkit.org/165596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187704 268f45cc-cd09-0410-ab3c-d52691b4dbfc